--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modern eCommerce Website with React</title>
+    <script
+      src="https://assets.adobedtm.com/aa8780dcd4cf/f133d4a9771e/launch-cd99558de02f.min.js"
+      async
+    ></script>
   </head>
   <body>
     <div id="root"></div>
