--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <script
+      type="text/plain"
       src="https://assets.adobedtm.com/aa8780dcd4cf/f133d4a9771e/launch-ff42d6302b3a-staging.min.js"
       async
     ></script>
