digital data added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="7a3d29d8a95615eee0752e8d-text/javascript">
+      window.pageName = "Product Page";
+      window.digitalData = window.digitalData || {};
+      window.digitalData.page = window.digitalData.page || {};
+    </script>
     <script
       src="https://assets.adobedtm.com/aa8780dcd4cf/f133d4a9771e/launch-cd99558de02f.min.js"
       async
