digital data added update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,53 @@
       window.pageName = "Product Page";
       window.digitalData = window.digitalData || {};
       window.digitalData.page = window.digitalData.page || {};
+      window.digitalData = {
+        "page": {
+          "pageInfo": {
+            "breadcrumbs": "luma:us:en",
+            "pageShortName": "luma:[...]:en",
+            "pageName": "content:luma:us:en",
+            "destinationURL": "https://luma.enablementadobe.com/content/luma/us/en.html",
+            "isIframe": false,
+            "contentIframe": false,
+            "hierarchie1": "luma:us:en",
+            "title": "Luma: An Adobe demo brand",
+            "internalPageName": "en",
+            "pageID": "luma.enablementadobe.com:content:luma:us:en",
+            "tagging": "",
+            "server": "luma.enablementadobe.com",
+            "urlShortcut": ""
+          },
+          "category": {
+            "type": ":conf:we-retail:settings:wcm:templates:hero-page",
+            "version": "2023-8-3"
+          },
+          "attributes": {},
+          "components": []
+        },
+        "product": [
+          {
+            "productInfo": {}
+          }
+        ],
+        "cart": {
+          "productsInCart": 0
+        },
+        "user": [
+          {
+            "profile": [
+              {
+                "profileInfo": {},
+                "attributes": {
+                  "loggedIn": false
+                }
+              }
+            ]
+          }
+        ],
+        "pageInstanceID": "s7connect:publish:content:luma:us:en",
+        "language": "en"
+      };
     </script>
     <script
       src="https://assets.adobedtm.com/aa8780dcd4cf/f133d4a9771e/launch-cd99558de02f.min.js"
