--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script type="7a3d29d8a95615eee0752e8d-text/javascript">
       window.pageName = "Product Page";
       window.digitalData = window.digitalData || {};
-      window.digitalData.page = window.digitalData.page || {};
+      <!-- window.digitalData.page = window.digitalData.page || {}; -->
       window.digitalData = {
         "page": {
           "pageInfo": {
