digital data added changed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="7a3d29d8a95615eee0752e8d-text/javascript">
+    <script>
       window.digitalData = {
         "page": {
           "pageInfo": {
