--- a/index.html
+++ b/index.html
@@ -5,26 +5,9 @@
       window.digitalData = {
         "page": {
           "pageInfo": {
-            "breadcrumbs": "luma:us:en",
-            "pageShortName": "luma:[...]:en",
             "pageName": "content:luma:us:en",
-            "destinationURL": "https://luma.enablementadobe.com/content/luma/us/en.html",
-            "isIframe": false,
-            "contentIframe": false,
-            "hierarchie1": "luma:us:en",
-            "title": "Luma: An Adobe demo brand",
-            "internalPageName": "en",
-            "pageID": "luma.enablementadobe.com:content:luma:us:en",
-            "tagging": "",
-            "server": "luma.enablementadobe.com",
-            "urlShortcut": ""
+            "title": "An Adobe demo brand",
           },
-          "category": {
-            "type": ":conf:we-retail:settings:wcm:templates:hero-page",
-            "version": "2023-8-3"
-          },
-          "attributes": {},
-          "components": []
         },
         "product": [
           {
@@ -34,7 +17,6 @@
         "cart": {
           "productsInCart": 0
         },
-        "language": "en"
       };
     </script>
     <script
