datalayer updated with page url

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <script>
       window.digitalData = {
-        "page": {
-          "pageInfo": {
-            "pageName": "content:luma:us:en",
-            "title": "An Adobe demo brand",
+        page: {
+          pageInfo: {
+            pageName: "adobe-analytics.vercel.app",
+            pageUrl: "https://adobe-analytics.vercel.app/",
+            title: "An Adobe demo brand",
           },
         },
-        "product": [
+        product: [
           {
-            "productInfo": {}
-          }
+            productInfo: {},
+          },
         ],
-        "cart": {
-          "productsInCart": 0
+        cart: {
+          productsInCart: 0,
         },
       };
     </script>
