--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           productsInCart: 0,
         },
       };
-      window.adobeDataLayer = window.digitalData;
+      window.adobeDataLayer = window.adobeDataLayer;
     </script>
     <script
       src="https://assets.adobedtm.com/aa8780dcd4cf/f133d4a9771e/launch-cd99558de02f.min.js"
